--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = thomasfredericks/Bounce2@^2.70
+lib_deps = 
+	thomasfredericks/Bounce2@^2.70
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
